--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Jonas B. Nielsen <jonasbn@cpan.org>
 license = Artistic_2_0
 copyright_holder = Jonas B. Nielsen
 copyright_year   = 2014
-abstract = all modules in the Date::Holidays namespace
+abstract = Work package for holiday modules in the Date::Holidays namespace
 
 version = 0.01
 
