Specified perl version based on Perl::Critic information

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ fail_on_warning = none
 [ModuleBuild]
 
 [Prereqs]
+perl               = 5.006
 Date::Holidays::AT = 0
 Date::Holidays::NO = 0
 Date::Holidays::DK = 0
