--- a/dist.ini
+++ b/dist.ini
@@ -48,6 +48,7 @@ Date::Holidays::CA = 0
 Date::Holidays::CN = 0
 Date::Holidays::NZ = 0
 Date::Holidays::AU = 0
+Date::Holidays::RU = 0
 
 [GithubMeta]
 [MetaJSON]
