--- a/dist.ini
+++ b/dist.ini
@@ -45,7 +45,7 @@ Date::Holidays::BR = 0
 Date::Holidays::CA_ES = 0
 Date::Holidays::USFederal = 0
 Date::Holidays::CA = 0
-Date::Holidays::CN = 0
+;Date::Holidays::CN = 0
 Date::Holidays::NZ = 0
 Date::Holidays::AU = 0
 Date::Holidays::RU = 0
