Removed quiet from author dependencies failing on 5.10

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
 
    # Getting all the dependencies requested by author
 
-   - dzil listdeps --author | cpanm --quiet --notest --skip-satisfied
+   - dzil listdeps --author | cpanm --notest --skip-satisfied
 
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
 
