Commented out Date::Holidays::PT, it is currently b0rken and proposed patch has not been applied https://rt.cpan.org/Ticket/Display.html?id=98441

--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,7 @@ Date::Holidays::NO = 0
 Date::Holidays::DK = 0
 Date::Holidays::DE = 0
 Date::Holidays::GB = 0
-Date::Holidays::PT = 0
+;Date::Holidays::PT = 0
 Date::Holidays::ES = 0
 Date::Holidays::PL = 0
 Date::Holidays::CZ = 0
