CZ also fails it's build

--- a/dist.ini
+++ b/dist.ini
@@ -37,7 +37,7 @@ Date::Holidays::GB = 0
 ;Date::Holidays::PT = 0
 Date::Holidays::ES = 0
 Date::Holidays::PL = 0
-Date::Holidays::CZ = 0
+;Date::Holidays::CZ = 0
 Date::Holidays::KR = 0
 Date::Holidays::SK = 0
 Date::Holidays::FR = 0
