Prepping release 0.05 for release tomorrow, have re-enabled Date::Holidays::PT, thanks to AMBS for patch resulting in release 0.03 (see RT:98441)
https://rt.cpan.org/Ticket/Display.html?id=98441

--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,7 @@ copyright_holder = Jonas B. Nielsen
 copyright_year   = 2015
 abstract = Work package for holiday modules in the Date::Holidays namespace
 
-version = 0.04
+version = 0.05
 
 [@Basic]
 
@@ -34,7 +34,7 @@ Date::Holidays::NO = 0
 Date::Holidays::DK = 0
 Date::Holidays::DE = 0
 Date::Holidays::GB = 0
-;Date::Holidays::PT = 0
+Date::Holidays::PT = 0.03
 Date::Holidays::ES = 0
 Date::Holidays::PL = 0
 ;Date::Holidays::CZ = 0
