Added requirement from Dist::Zilla plugins not being installed by the plugins ???

--- a/dist.ini
+++ b/dist.ini
@@ -54,3 +54,9 @@ Date::Holidays::NZ = 0
 Date::Holidays::AU = 0
 Date::Holidays::RU = 0
 Date::Holidays::BY = 0
+
+[Prereqs / TestRequires]
+Test::Kwalitee          = 1.21 ; from Dist::Zilla
+Pod::Coverage::TrustPod = 0    ; from Dist::Zilla
+Test::Pod               = 1.41 ; from Dist::Zilla
+Test::Pod::Coverage     = 1.08 ; from Dist::Zilla
