--- a/dist.ini
+++ b/dist.ini
@@ -34,26 +34,28 @@ mb_version = 0.30
 [Prereqs]
 perl               = 5.006
 Date::Holidays::AT = 0
-Date::Holidays::NO = 0
-Date::Holidays::DK = 0
-Date::Holidays::DE = 0
-Date::Holidays::GB = 0
-Date::Holidays::PT = 0.03
-Date::Holidays::ES = 0
-Date::Holidays::PL = 0
-;Date::Holidays::CZ = 0
-Date::Holidays::KR = 0
-Date::Holidays::SK = 0
-Date::Holidays::FR = 0
-Date::Holidays::BR = 0
-Date::Holidays::CA_ES = 0
-Date::Holidays::USFederal = 0
-Date::Holidays::CA = 0
-;Date::Holidays::CN = 0
-Date::Holidays::NZ = 0
 Date::Holidays::AU = 0
-Date::Holidays::RU = 0
+Date::Holidays::BR = 0
 Date::Holidays::BY = 0
+Date::Holidays::CA = 0
+Date::Holidays::CA_ES = 0
+;Date::Holidays::CN = 0
+;Date::Holidays::CZ = 0
+Date::Holidays::DE = 0
+Date::Holidays::DK = 0
+Date::Holidays::ES = 0
+Date::Holidays::FR = 0
+Date::Holidays::GB = 0
+Date::Holidays::KR = 0
+Date::Holidays::NO = 0
+Date::Holidays::NZ = 0
+Date::Holidays::PL = 0
+Date::Holidays::PT = 0.03
+Date::Holidays::RU = 0
+Date::Holidays::SK = 0
+Date::Holidays::UK = 0
+Date::Holidays::USFederal = 0
+Date::Japanese::Holiday = 0
 
 [Prereqs / TestRequires]
 Test::Kwalitee          = 1.21 ; from Dist::Zilla
