--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,4 @@
+; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 name    = Task-Date-Holidays
 author  = Jonas B. Nielsen <jonasbn@cpan.org>
 license = Artistic_2_0
@@ -5,32 +6,59 @@ copyright_holder = Jonas B. Nielsen
 copyright_year   = 2017
 abstract = Work package for holiday modules in the Date::Holidays namespace
 
-version = 0.06
+; SEE: [PkgVersion] and [PodVersion]
+version = 0.07
 
+; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 [@Basic]
 
+; REF: Dist::Zilla::Plugin::GithubMeta: https://metacpan.org/pod/Dist::Zilla::Plugin::GithubMeta
 [GithubMeta]
+homepage = https://github.com/jonasbn/perl-task-date-holidays
+issues   = 1
 
+; REF: Dist::Zilla::Plugin::ExtraTests https://metacpan.org/pod/Dist::Zilla::Plugin::ExtraTests
+[ExtraTests]
+
+; REF: Dist::Zilla::Plugin::PodCoverageTests: https://metacpan.org/pod/Dist::Zilla::Plugin::PodCoverageTests
 [PodCoverageTests]
 
+; REF: Dist::Zilla::Plugin::PodSyntaxTests: https://metacpan.org/pod/Dist::Zilla::Plugin::PodSyntaxTests
 [PodSyntaxTests]
 
+; REF: Dist::Zilla::Plugin::Test::Kwalitee: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::Kwalitee
 [Test::Kwalitee]
 
-[PkgVersion]
-
-[PodVersion]
-
+; REF: Dist::Zilla::Plugin::Test::Compile: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::Compile
 [Test::Compile]
 fail_on_warning = none
 
+; REF: Dist::Zilla::Plugin::Test::CPAN::Changes: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::CPAN::Changes
 [Test::CPAN::Changes]
 
+; REF: Dist::Zilla::Plugin::MetaJSON: https://metacpan.org/pod/Dist::Zilla::Plugin::MetaJSON
+[MetaJSON]
+
+; REF: Dist::Zilla::Plugin::Test::CPAN::Meta::JSON: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::CPAN::Meta::JSON
+[Test::CPAN::Meta::JSON]
+
+; REF: Dist::Zilla::Plugin::PkgVersion: https://metacpan.org/pod/Dist::Zilla::Plugin::PkgVersion
+[PkgVersion]
+
+; REF: Dist::Zilla::Plugin::PodVersion: https://metacpan.org/pod/Dist::Zilla::Plugin::PodVersion
+[PodVersion]
+
+; REF: Dist::Zilla::Plugin::ModuleBuild: https://metacpan.org/pod/Dist::Zilla::Plugin::ModuleBuild
 [ModuleBuild]
 mb_version = 0.30
 
-[MetaJSON]
+; REF: Dist::Zilla::Plugin::MetaProvides::Package : https://metacpan.org/pod/Dist::Zilla::Plugin::MetaProvides::Package
+[MetaProvides::Package]
+inherit_version = 0    ;optional flag
+inherit_missing = 0    ;optional flag
+meta_noindex    = 1    ;optional flag
 
+; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 [Prereqs]
 perl               = 5.006
 Date::Holidays::AT = 0
@@ -39,8 +67,8 @@ Date::Holidays::BR = 0
 Date::Holidays::BY = 0
 Date::Holidays::CA = 0
 Date::Holidays::CA_ES = 0
-;Date::Holidays::CN = 0
-;Date::Holidays::CZ = 0
+;Date::Holidays::CN = 0 ; failing build
+;Date::Holidays::CZ = 0 ; failing build
 Date::Holidays::DE = 0
 Date::Holidays::DK = 0
 Date::Holidays::ES = 0
@@ -57,6 +85,7 @@ Date::Holidays::UK = 0
 Date::Holidays::USFederal = 0
 Date::Japanese::Holiday = 0
 
+; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 [Prereqs / TestRequires]
 Test::Kwalitee          = 1.21 ; from Dist::Zilla
 Pod::Coverage::TrustPod = 0    ; from Dist::Zilla
