--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,11 @@ version = 0.07
 homepage = https://github.com/jonasbn/perl-task-date-holidays
 issues   = 1
 
+; REF: Dist::Zilla::Plugin::ReadmeAnyFromPod: https://metacpan.org/pod/Dist::Zilla::Plugin::ReadmeAnyFromPod
+; REF: http://blogs.perl.org/users/ovid/2014/03/a-simple-distini-for-distzilla.html
+[ ReadmeAnyFromPod / MarkdownInRoot ]
+filename = README.md
+
 ; REF: Dist::Zilla::Plugin::ExtraTests https://metacpan.org/pod/Dist::Zilla::Plugin::ExtraTests
 [ExtraTests]
 
