Enabled CN and CZ for evaluation

--- a/dist.ini
+++ b/dist.ini
@@ -72,8 +72,8 @@ Date::Holidays::BR = 0
 Date::Holidays::BY = 0
 Date::Holidays::CA = 0
 Date::Holidays::CA_ES = 0
-;Date::Holidays::CN = 0 ; failing build
-;Date::Holidays::CZ = 0 ; failing build
+Date::Holidays::CN = 0
+Date::Holidays::CZ = 0
 Date::Holidays::DE = 0
 Date::Holidays::DK = 0
 Date::Holidays::ES = 0
