--- a/dist.ini
+++ b/dist.ini
@@ -86,6 +86,7 @@ Date::Holidays::PL = 0
 Date::Holidays::PT = 0.03
 Date::Holidays::RU = 0
 Date::Holidays::SK = 0
+Date::Holidays::UA = 0
 Date::Holidays::UK = 0
 Date::Holidays::USFederal = 0
 Date::Japanese::Holiday = 0
