Minor adjustments to more contemporary version

--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,10 @@
 ; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 name    = Task-Date-Holidays
-author  = Jonas B. Nielsen <jonasbn@cpan.org>
+author  = Jonas B. <jonasbn@cpan.org>
 license = Artistic_2_0
-copyright_holder = Jonas B. Nielsen
-copyright_year   = 2017
+copyright_holder = Jonas B.
+copyright_year   = 2020
 abstract = Work package for holiday modules in the Date::Holidays namespace
-
-; SEE: [PkgVersion] and [PodVersion]
-version = 0.07
 
 ; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
 [@Basic]
@@ -21,6 +18,9 @@ issues   = 1
 ; REF: http://blogs.perl.org/users/ovid/2014/03/a-simple-distini-for-distzilla.html
 [ ReadmeAnyFromPod / MarkdownInRoot ]
 filename = README.md
+
+; REF: Dist::Zilla::Plugin:::VersionFromMainModule https://metacpan.org/pod/Dist::Zilla::Plugin::VersionFromMainModule
+[VersionFromMainModule]
 
 ; REF: Dist::Zilla::Plugin::ExtraTests https://metacpan.org/pod/Dist::Zilla::Plugin::ExtraTests
 [ExtraTests]
@@ -46,12 +46,6 @@ fail_on_warning = none
 
 ; REF: Dist::Zilla::Plugin::Test::CPAN::Meta::JSON: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::CPAN::Meta::JSON
 [Test::CPAN::Meta::JSON]
-
-; REF: Dist::Zilla::Plugin::PkgVersion: https://metacpan.org/pod/Dist::Zilla::Plugin::PkgVersion
-[PkgVersion]
-
-; REF: Dist::Zilla::Plugin::PodVersion: https://metacpan.org/pod/Dist::Zilla::Plugin::PodVersion
-[PodVersion]
 
 ; REF: Dist::Zilla::Plugin::ModuleBuild: https://metacpan.org/pod/Dist::Zilla::Plugin::ModuleBuild
 [ModuleBuild]
