--- a/dist.ini
+++ b/dist.ini
@@ -62,11 +62,12 @@ meta_noindex    = 1    ;optional flag
 perl               = 5.006
 Date::Holidays::AT = 0
 Date::Holidays::AU = 0
+Date::Holidays::AW = 0
 Date::Holidays::BR = 0
 Date::Holidays::BY = 0
 Date::Holidays::CA = 0
 Date::Holidays::CA_ES = 0
-;Date::Holidays::CN = 0 ; failing build
+Date::Holidays::CN = 0
 Date::Holidays::CZ = 0
 Date::Holidays::DE = 0
 Date::Holidays::DK = 0
@@ -74,6 +75,8 @@ Date::Holidays::ES = 0
 Date::Holidays::FR = 0
 Date::Holidays::GB = 0
 Date::Holidays::KR = 0
+Date::Holidays::KZ = 0
+Date::Holidays::NL = 0
 Date::Holidays::NO = 0
 Date::Holidays::NZ = 0
 Date::Holidays::PL = 0
