Added missing test requirements to the configuration Test::Fatal and Test::Class

--- a/dist.ini
+++ b/dist.ini
@@ -94,3 +94,5 @@ Test::Kwalitee          = 1.21 ; from Dist::Zilla
 Pod::Coverage::TrustPod = 0    ; from Dist::Zilla
 Test::Pod               = 1.41 ; from Dist::Zilla
 Test::Pod::Coverage     = 1.08 ; from Dist::Zilla
+Test::Class             = 0;
+Test::Fatal             = 0
