--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ name    = Task-Date-Holidays
 author  = Jonas B. <jonasbn@cpan.org>
 license = Artistic_2_0
 copyright_holder = Jonas B.
-copyright_year   = 2020
+copyright_year   = 2022
 abstract = Work package for holiday modules in the Date::Holidays namespace
 
 ; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
@@ -72,7 +72,7 @@ Date::Holidays::CZ = 0
 Date::Holidays::DE = 0
 Date::Holidays::DK = 0
 Date::Holidays::ES = 0
-Date::Holidays::FR = 0
+Date::Holidays::FR = 0.04
 Date::Holidays::GB = 0
 Date::Holidays::KR = 0
 Date::Holidays::KZ = 0
@@ -96,3 +96,4 @@ Test::Pod               = 1.41 ; from Dist::Zilla
 Test::Pod::Coverage     = 1.08 ; from Dist::Zilla
 Test::Class             = 0
 Test::Fatal             = 0
+Date::Holidays          = 0
