Only pre-commit enabled, GH actions are handled by dependabot

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,5 @@
     "extends": [
         "config:base"
     ],
-    "enabledManagers": ["pre-commit", "github-actions"]
+    "enabledManagers": ["pre-commit"]
 }
