My Ubuntu foo, is mediocre. Trying with a sub-command parameter for apt-get

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get libmpfr-dev libgmp-dev
+      - run: sudo apt-get update && apt-get install -y libmpfr-dev libgmp-dev
 
   dzil:
     runs-on: ubuntu-latest
