Added Date::Holidays::US with preliminary tests, more to come

--- a/dist.ini
+++ b/dist.ini
@@ -85,6 +85,7 @@ Date::Holidays::RU = 0
 Date::Holidays::SK = 0
 Date::Holidays::UA = 0
 Date::Holidays::UK = 0
+Date::Holidays::US = 0
 Date::Holidays::USFederal = 0
 Date::Japanese::Holiday = 0
 
