--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,17 @@ on:
   schedule:
     - cron: '0 0 */28 */1 *'
 
+env:
+  GMP_HOME: /usr
+  MPFR_HOME: /usr
+
 jobs:
-  dzil:
+  linux:
     runs-on: ubuntu-latest
     name: "dzil run"
     steps:
+      - name: "Install C libraries for dependencies"
+        run: sudo apt-get update && sudo apt-get install -y libmpfr-dev libgmp-dev
       - name: "Checkout repository"
         uses: actions/checkout@v3
       - name: "Installing dependencies and testing all using dzil"
