Attempting a log dump, so I can examine the build of DateTime::Astro

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,6 @@ jobs:
         uses: jonasbn/github-action-perl-dist-zilla@0.3.0
         with:
           dzil-arguments: 'test --all'
+      - name: "Dumping build log"
+        run: cat /github/home/.cpanm/build.log
+        
