--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libmpfr-dev libgmp-dev
       - name: "Checkout repository"
         uses: actions/checkout@v3
-      - name: "Installing dependencies and testing all using dzil"
-        uses: jonasbn/github-action-perl-dist-zilla@0.4.0
+      - name: uses install-with-cpanm
+        uses: perl-actions/install-with-cpanm@v1
         with:
-          dzil-arguments: 'test --all'
-      - name: "Dumping build log"
-        uses: actions/upload-artifact@v3
-        with:
-            name: build-logs
-            path: /github/home/.cpanm/build.log
+          cpanfile: "cpanfile"
+          sudo: false
+      - run: perl Makefile.PL
+      - run: make test
