Changed to handling prereqs via cpanfile

--- a/dist.ini
+++ b/dist.ini
@@ -57,44 +57,5 @@ inherit_version = 0    ;optional flag
 inherit_missing = 0    ;optional flag
 meta_noindex    = 1    ;optional flag
 
-; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
-[Prereqs]
-perl               = 5.006
-Date::Holidays::AT = 0
-Date::Holidays::AU = 0
-Date::Holidays::AW = 0
-Date::Holidays::BR = 0
-Date::Holidays::BY = 0
-Date::Holidays::CA = 0
-Date::Holidays::CA_ES = 0
-Date::Holidays::CN = 0
-Date::Holidays::CZ = 0
-Date::Holidays::DE = 0
-Date::Holidays::DK = 0
-Date::Holidays::ES = 0
-Date::Holidays::FR = 0.04
-Date::Holidays::GB = 0
-Date::Holidays::KR = 0
-Date::Holidays::KZ = 0
-Date::Holidays::NL = 0
-Date::Holidays::NO = 0
-Date::Holidays::NZ = 0
-Date::Holidays::PL = 0
-Date::Holidays::PT = 0.03
-Date::Holidays::RU = 0
-Date::Holidays::SK = 0
-Date::Holidays::UA = 0
-Date::Holidays::UK = 0
-Date::Holidays::US = 0
-Date::Holidays::USFederal = 0
-Date::Japanese::Holiday = 0
-
-; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
-[Prereqs / TestRequires]
-Test::Kwalitee          = 1.21 ; from Dist::Zilla
-Pod::Coverage::TrustPod = 0    ; from Dist::Zilla
-Test::Pod               = 1.41 ; from Dist::Zilla
-Test::Pod::Coverage     = 1.08 ; from Dist::Zilla
-Test::Class             = 0
-Test::Fatal             = 0
-Date::Holidays          = 0
+; REF: https://metacpan.org/pod/Dist::Zilla::Plugin::Prereqs::FromCPANfile
+[Prereqs::FromCPANfile]
