--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,15 @@ copyright_holder = Jonas B.
 copyright_year   = 2022
 abstract = Work package for holiday modules in the Date::Holidays namespace
 
-; REF: Dist::Zilla https://metacpan.org/pod/Dist::Zilla
-[@Basic]
+; REF: https://metacpan.org/pod/Dist::Zilla::PluginBundle::Filter
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+
+; REF: https://metacpan.org/pod/Dist::Zilla::Plugin::GatherDir
+[GatherDir]
+; this plugin needs no config and gathers most of your files
+exclude_filename = Makefile.PL
 
 ; REF: Dist::Zilla::Plugin::GithubMeta: https://metacpan.org/pod/Dist::Zilla::Plugin::GithubMeta
 [GithubMeta]
@@ -47,15 +54,15 @@ fail_on_warning = none
 ; REF: Dist::Zilla::Plugin::Test::CPAN::Meta::JSON: https://metacpan.org/pod/Dist::Zilla::Plugin::Test::CPAN::Meta::JSON
 [Test::CPAN::Meta::JSON]
 
-; REF: Dist::Zilla::Plugin::ModuleBuild: https://metacpan.org/pod/Dist::Zilla::Plugin::ModuleBuild
-[ModuleBuild]
-mb_version = 0.30
-
 ; REF: Dist::Zilla::Plugin::MetaProvides::Package : https://metacpan.org/pod/Dist::Zilla::Plugin::MetaProvides::Package
 [MetaProvides::Package]
 inherit_version = 0    ;optional flag
 inherit_missing = 0    ;optional flag
 meta_noindex    = 1    ;optional flag
+
+; REF: https://metacpan.org/pod/Dist::Zilla::Plugin::CopyFilesFromBuild
+[CopyFilesFromBuild]
+copy = Makefile.PL
 
 ; REF: https://metacpan.org/pod/Dist::Zilla::Plugin::Prereqs::FromCPANfile
 [Prereqs::FromCPANfile]
